# ParallelProgramming

./: .gitignore  CMakeLists.txt  PP.cpp  PP.h  README.md  lab1.cpp  lab2.cpp  lab3.cpp  matrix.h  results_lab1.txt
lab1/: Report.txt  check.py  draw_graph.py  results_lab1.txt  trust_me.txt
lab1/matrix&muls/10/: A.txt  B.txt  multiplyed.txt  multyplyed.txt
lab1/matrix&muls/100/: A.txt  B.txt  multyplyed.txt
lab1/matrix&muls/1000/: A.txt  B.txt
lab1/matrix&muls/200/: A.txt  B.txt  multyplyed.txt  try.py
lab1/matrix&muls/500/: A.txt  B.txt  multiplyed.txt  multyplyed.txt
lab1/matrix&muls/800/: A.txt  B.txt
lab2/: check.py  draw_graph.py  find_average.py  results_lab1.txt  results_lab2.txt  results_lab2_avg.txt  trust_me.txt
lab2/matrix&muls&results/10/: A.txt  B.txt  multiplyed.txt
lab2/matrix&muls&results/10/threads_14/: multiplyed.txt
lab2/matrix&muls&results/100/: A.txt  B.txt  multiplyed.txt
lab2/matrix&muls&results/100/threads_1/: multiplyed.txt
lab2/matrix&muls&results/1000/: A.txt  B.txt
lab2/matrix&muls&results/200/: A.txt  B.txt  multiplyed.txt
lab2/matrix&muls&results/200/threads_6/: multiplyed.txt
lab2/matrix&muls&results/500/: A.txt  B.txt  multiplyed.txt
lab2/matrix&muls&results/500/threads_1/: multiplyed.txt
lab2/matrix&muls&results/800/: A.txt  B.txt
lab3/: check.py  grapic.py  trust_me.txt
lab3/base/100/: A.txt  B.txt
lab3/base/1000/: A.txt  B.txt
lab3/base/200/: A.txt  B.txt
lab3/base/400/: A.txt  B.txt
lab3/base/50/: A.txt  B.txt
lab3/base/600/: A.txt  B.txt
lab3/data/: results_times_1.txt  results_times_10.txt  results_times_12.txt  results_times_2.txt  results_times_4.txt  results_times_6.txt  results_times_8.txt
lab3/data/1/200/: result.txt
lab3/data/10/400/: result.txt
lab3/data/12/100/: result.txt
lab3/data/2/600/: result.txt
lab3/data/8/50/: result.txt
matrix&muls/10/: A.txt  B.txt
matrix&muls/100/: A.txt  multiplyed.txt
matrix&muls/1000/: A.txt
matrix&muls/200/: B.txt  multiplyed.txt
matrix&muls/500/: B.txt
